--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,27 @@
-body::-webkit-scrollbar {
-    display: none; /* Hide scrollbar for Webkit-based browsers */
+/* App.css */
+
+/* Hide scrollbar for Webkit-based browsers */
+/* body::-webkit-scrollbar {
+    display: none;
+} */
+
+/* Default cursor for the entire page */
+body {
+    cursor: url('/src/assets/beecursorfinal1.png') 16 16, auto; /* Adjust hotspot if needed */
+}
+
+/* Custom cursor on hover for elements */
+.custom-cursor:hover {
+    cursor: url('/src/assets/cute-honey-cursor.png') 16 16, auto; /* Adjust hotspot if needed */
 }
 
 
-/* service page animations */
+/* Service page animations */
 .services-grid {
     display: flex;
     flex-wrap: wrap;
     justify-content: start;
-    padding: 0 55px;
+    padding: 0 50px;
     gap: 30px;
 }
 
@@ -43,4 +56,25 @@ body::-webkit-scrollbar {
 .service-description {
     font-size: 1rem;
     color: #666;
+}
+
+
+/* contact page */
+#contact .form-control{
+    background-color: #D3AF85;
+    border: 2px solid #D3AF85;
+    color: rgb(0, 0, 0);
+    outline: none;
+}
+#contact .form-control:focus{
+    border-color: #F4B315;
+    box-shadow: none;
+}
+#contact .form-control::placeholder{
+    color: rgb(111, 109, 109);
+}
+#contact input.form-control{
+    height: 44px;
+    border-radius: 10px;
+    padding: 5px 8px;
 }
